themes/ruuda/static/css/page_light.css
*
{
  margin: 0;
  padding: 0;
}

code, em, strong
{
  line-height: 1;
}

html
{
  font-size: 16px;
}

body
{
  background-color: #f5f5f5;
  border-top: 0.5em solid #18699f;
  padding-top: 0.2em;
  color: #456;
  font-family: Calluna Sans, sans-serif;
  /* Firefox applies ligatures automatically when they are available, but Chrome
   * needs to be told explicitly. Note: Blink will drop the -webkit prefix soon.
   * See https://crbug.com/537293. This is landing in Chrome 48. */
  -webkit-font-feature-settings: 'liga', 'kern';
  font-feature-settings: 'liga', 'kern';
  line-height: 1.4em;
}

#content, #footer
{
  padding: 1.4em;
  margin-left: auto;
  margin-right: auto;

  /* For lightweight pages with little content, reduce the maximum width so
   * there are more lines. */
  max-width: 20.4em;
}

#teaser
{
  padding-top: 0.6em;
  padding-bottom: 0.6em;
  padding-left: 1.4em;
  padding-right: 1.4em;
  margin-left: auto;
  margin-right: auto;

  /* For lightweight pages with little content, reduce the maximum width so
   * there are more lines. */
  max-width: 20.4em;
}

#content
{
  padding-top: 0;
}

header
{
  font-family: 'Libre Baskerville', serif;
  margin-left: 1em;
  margin-right: 1em;
  overflow: hidden;
  text-align: center;
}

h1
{
  /* Align the header on the third baseline. (The first baseline is at the
   * bottom of the top border of the body.) Ensure that the bottom margin
   * aligns with the grid. */
  color: #000;
  font-size: 2.4em;
  line-height: 2.8rem;
  margin-bottom: 0.7rem;
  padding-top: 2.8rem;
  text-transform: capitalize;
}

header > h2
{
  -webkit-font-feature-settings: 'dlig';
  font-feature-settings: 'dlig';
  font-size: 1.4em;
  font-style: italic;
  font-weight: normal;
  line-height: 1.4rem;
  margin-bottom: 1.0rem;
  padding-top: 0.4rem;
}

header > p
{
  color: #18699f;
  padding-top: 0.5em;
  padding-bottom: 0.9em;
  margin-bottom: 0;
}

/* The headings may contain manually inserted line breaks for a more balanced
 * break, but these are intended for full-width pages only. Ignore them for
 * narrow viewports. */
h1 > br
{
  display: none;
}

p, nav
{
  margin-bottom: 1em;
  padding-top: 0.4em;
}

a
{
  color: #18699f;
  text-decoration: none;
}

/* Used for post titles on the archive page. */
h3
{
  font-family: Georgia, serif;
  /* Align as p, but remove the blank line afterwards. */
  font-size: 1em;
  margin-bottom: -0.4em;
  padding-top: 0.4em;
}

h3 > a
{
  color: inherit;
}

abbr, .smcp
{
  /* Use the both the caps-to-small-caps (c2sc) opentype feature, and small
   * normal lower case to small caps (smcp). This means that the text will
   * render in all small caps if opentype features are supported, or in its
   * original casing if they are not. I prefer to fall back to the original
   * casing instead of all caps, because all caps are too shouty. For acronyms
   * the original caps are still all caps, but for most .smcp things they are
   * not. */
  /* TODO: Remove prefixed version once Blink drops the prefix in Chrome 48. */
  -webkit-font-feature-settings: 'smcp', 'c2sc';
  font-feature-settings: 'smcp', 'c2sc';

  /* Note: Enabling letter spacing breaks small caps in Blink before version
   * 48. I fixed it in https://crrev.com/1416603005 which will go mainstream
   * with Chrome 48. */
  letter-spacing: 0.1em;
}

abbr
{
  /* The generous letter spacing for small caps is great as a stylistic feature,
   * but it is too much in the body text. */
  letter-spacing: 0.03em;

  /* Compensate for the extra space at the end. */
  margin-right: -0.03em;
}

.run-in
{
  /* Use the 'smcp' feature instead of font-variant: small-caps, because not all
   * browsers will select the true small-caps with font-variant. For the run-in
   * it is fine if the fallback is to do nothing special at all. */
  /* TODO: Remove prefixed version once Blink drops the prefix in Chrome 48. */
  -webkit-font-feature-settings: 'smcp';
  font-feature-settings: 'smcp';

  /* Use a bit more modest letter spacing here than for .smcp. */
  letter-spacing: 0.05em;
}

h2
{
  font-family: Georgia, serif;
  font-size: 1.4em;
  line-height: 1em;
  margin-bottom: 0.2rem;
  padding-top: 1.2rem;
}

/* TODO: Split into conditionally-included css and remove the class. */
.archive h2
{
  color: #ccc; /* TODO: pick a unified color scheme. */
  font-size: 2.8em;
  letter-spacing: 1rem;

  /* Unlike other h2, align this bigger one to the baseline. */
  margin-bottom: 0.6rem;
  padding-top: 0.8rem;
}

ul, ol
{
  counter-reset: ol;
  list-style: none;
  margin-bottom: 1em;
  padding-top: 0.4em;
}

li
{
  margin-left: 1em;
}

li:before
{
  display: inline-block;
  margin-left: -1em;
  width: 1em;
}

ul > li:before
{
  content: '•';
}

ol > li:before
{
  content: counter(ol, decimal);
  counter-increment: ol;
  font-weight: bold;
}

table
{
  border-spacing: 0;
  margin-bottom: 1em;
  text-align: left;
}

th
{
  padding-top: 0.4em;
}

th, td
{
  padding-right: 1.4em;
  vertical-align: top;
}

code
{
  color: #c35;
  font-family: Inconsolata, Consolas, monospace;
}

div.sourceCode
{
  /* Hang the border left of the pre in the margin. */
  /* TODO: How do I handle this when there is no div? */
  margin-left: -0.25em;
  overflow: hidden;
}

pre
{
  /* The top and bottom of the block are not baseline-aligned, but the space
   * between the top and the text baseline and between the bottom and the
   * x-height is both 1.6em. The code baseline is offset from the regular
   * baseline by 0.7em (half a line height). */
  background-color: #f8f7f4;
  border-left: 0.25rem solid #c35;
  margin-bottom: 0.6rem;
  margin-top: 0.2rem;
  overflow-x: auto;
  padding: 1rem;
  padding-left: 1.4rem;
  padding-right: 1.4rem;

  /* Use a slightly smaller font size for code blocks, because matching the
   * x-height to the body font makes the code look too big. Do keep the same
   * line height to ensure proper baseline alignment. */
  font-size: 0.9em;
  line-height: 1.4rem;
}

code.sourceCode
{
  color: #456;
}

/* Syntax highlighting colors, adapted from the default prism.js theme. */
.kw, .cf           { color: #07a; } /* Keyword, control flow */
.dt, .at           { color: #d56; } /* Data type, function, attribute */
.fu                { color: #690; } /* Function */
.dv, .bn, .fl, .er { color: #905; } /* Decimal, base N, float, decimal part */
.ch, .st           { color: #d80; } /* Character, string */
.co                { color: #789; } /* Comment */

div.highlight pre
{
  border: none;
}

img
{
  width: 100%;
  height: auto;

  /* To align images the same as code blocks, they need to be 0.2em below the
   * baseline. The paragraph has a padding of 0.4em, so compensate the 0.2.
   * This leaves 1.6em between the baseline and the image. For optical
   * alignment, the same space should be left between the bottom and the
   * x-height of the next line. Paragraphs are aligned such that there is 1em
   * between the baseline and the x-height of the next line. The paragraph that
   * surrounds the image provides 1em bottom margin, so 0.4em needs to be
   * compensated, plus 0.2em for the top offset. */
  margin-top: -0.2em;
  margin-bottom: -0.6em;
  border-radius: 0.25em;
}

video
{
  width: 100%;
}

blockquote
{
  font-family: Calluna, serif;
  font-style: italic;
  padding-left: 1em;
  padding-right: 1em;
}

/* Light pages do not have a teaser or footer, no need to include the css. */

nav
{
  text-align: center;
}

nav a
{
  margin-left: 1em;
  margin-right: 1em;
  text-transform: lowercase;
}

.archive p > a
{
  /* The next line is required to fix baseline alingnment in Firefox. */
  line-height: 0;
}

.archive p > a:after
{
  /* U+00a0 is a non-breaking space. */
  content: '\a0»';

}

/* Scale font size as the square root of the viewport width. 16px should be the
 * minimum font size, for a viewport width of 400px. At 1600px, the content
 * should fill half of the viewport. That means 36em is 800px, so the font size
 * should be 22px.
 *
 * This leads to the following relations:
 *
 *     font-size = 10 + 12 * sqrt(width / 1600),
 *     width     = (font-size - 10)^2 * (1600 / 144)
 *
 * Note that the min-width given below is actually the viewport width for its
 * font size minus 0.5px, so the font size is right on average. */

@media(min-width: 470px)
{
  html { font-size: 17px; }

  /* Add some margin to the heading to make it line-wrap nicer. Smaller
   * viewports get more room because the words might not fit otherwise. */
  header
  {
    margin-left: 2.8em;
    margin-right: 2.8em;
  }
}

@media(min-width: 625px)
{
  html { font-size: 18px; }

 /* Full-width headings have been line-wrapped manually for a more balanced
  * result than what the browser would do. Even though at this size the line
  * width is not yet 36em, titles that need breaking are typically much
  * shorter per line, so this should fit. */
  h1 > br
  {
    display: block;
  }
}

/* At this width, the viewport is wide enough to fit the content at its
 * maximum width (36em). */
@media(min-width: 802px)
{
  html { font-size: 19px; }

  /* If we are on a large-ish screen anyway, give the header some room to
   * breathe. */
  header
  {
    margin-top: 1.4em;
    margin-bottom: 1.4em;
  }
}

@media(min-width: 1003px)
{
  html { font-size: 20px; }
}

@media(min-width: 1225px)
{
  html { font-size: 21px; }

  /* At this width it becomes feasible to hang the year headers in the margin. */
  .archive h2
  {
    text-align: right;
    letter-spacing: 0.5rem;
    width: 8rem;
    height: 0;

    /* I want 2em distance to the text. 0.5em comes from the letter spacing
     * already, 8em to compensate the width, so 9.5em in total. */
    margin-left: -9.5rem;
    margin-bottom: -0.8rem;
  }

  /* Move the footer navigation into the margin too, left of the "About me"
   * paragraph. */
  #footer
  {
    /* Add 6em, the width of the navigation. */
    max-width: 42em;
  }

  footer h2
  {
    /* Compensate the widening offset. */
    margin-left: 3rem;
  }

  footer nav
  {
    float: left;
    text-align: right;
    width: 6em;

    /* The footer gets 3em wider on the left, so add another 3em to move the
     * nav fully into the margin, then separate from the text by 2em more. */
    margin-left: -5em;
  }

  #about
  {
    float: right;
    width: 36em;
    margin-right: 3em;
  }
}

@media(min-width: 1496px) { html { font-size: 22px; } }
@media(min-width: 1736px) { html { font-size: 23px; } }
@media(min-width: 2025px) { html { font-size: 24px; } }

/* At the points where the font size changes, the viewport width in ems makes
 * a jump:
 *
 *   469px -> 470px: 29.3em -> 27.6em (delta -1.7em)
 *   624px -> 625px: 36.7em -> 34.7em (delta -2.0em)
 *   801px -> 802px: 44.5em -> 42.2em (delta -2.3em)
 *
 * Instead of having a minimal margin until the viewport is wide enough, I like
 * to gradually increase the margin. Changing the margins at the same time as
 * the font size would make the difference in line width even more extreme, so
 * instead change the margins in between. (The in-between points can be computed
 * using the width formula above, but now at integer font sizes.)
 *
 * The settings below split the first jump in 1.2em and 0.5em, and the second
 * jump in 1.6em and 0.4em. */

/* Ideal width for 16px font size. */
@media(min-width: 400px)
{
  #content, #teaser, #footer
  {
    padding-left: 2em;
    padding-right: 2em;
  }
}

/* Ideal width for 18px font size. */
@media(min-width: 544px)
{
  #content, #teaser, #footer
  {
    padding-left: 2.8em;
    padding-right: 2.8em;
  }

  /* Hang list numbers and bullets in the margin when there is enough space. */
  li
  {
    margin-left: 0;
  }
}

@media(max-width: 490px)
{
  /* On narrow screens, remove the dot in the footer and make it behave like
   * a line break instead. */
  #breakdot
  {
    display: block;
    height: 0;
    overflow: hidden;
    width: 0;
  }
}

/* TODO: Test this on larger screens. */

